--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,6 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.13"
 fastapi = "^0.115.6"
-unicorn = "^0.32.1"
 
 [tool.poetry.group.dev.dependencies]
 black = "24.10.0"
@@ -22,7 +21,8 @@ build-backend = "poetry.core.masonry.api"
 [dependency-groups]
 dev = [
     "black (==24.10.0)",
-    "ruff (==0.8.2)"
+    "ruff (==0.8.2)",
+    "mypy (==1.13.0)"
 ]
 
 [tool.black]
@@ -30,3 +30,8 @@ line-length = 120
 
 [tool.ruff]
 target-version = "py313"
+
+[tool.mypy]
+plugins = ["pydantic.mypy"]
+python_version = 3.13
+strict = true
