--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,10 @@ fastapi = "^0.115.6"
 [tool.poetry.group.dev.dependencies]
 black = "24.10.0"
 ruff = "0.8.2"
-
+mypy = "1.13.0"
+pytest = "8.3.4"
+coverage = "7.6.9"
+pytest-asyncio = "0.25.0"
 
 [build-system]
 requires = ["poetry-core"]
@@ -22,7 +25,10 @@ build-backend = "poetry.core.masonry.api"
 dev = [
     "black (==24.10.0)",
     "ruff (==0.8.2)",
-    "mypy (==1.13.0)"
+    "mypy (==1.13.0)",
+    "pytest (==8.3.4)",
+    "coverage (==7.6.9)",
+    "pytest-asyncio (==0.25.0)"
 ]
 
 [tool.black]
@@ -35,3 +41,10 @@ target-version = "py313"
 plugins = ["pydantic.mypy"]
 python_version = 3.13
 strict = true
+
+[tool.coverage.run]
+omit = ["*/test_*.py"]
+
+[tool.pytest.ini_options]
+asyncio_mode = "auto"
+asyncio_default_fixture_loop_scope = "session"
