add meeting create spec

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.13"
 fastapi = "^0.115.6"
+orjson = "3.10.12"
 
 [tool.poetry.group.dev.dependencies]
 black = "24.10.0"
