--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ readme = "README.md"
 python = "^3.13"
 fastapi = "^0.115.6"
 orjson = "3.10.12"
+uvicorn = "^0.30.0"
 
 [tool.poetry.group.dev.dependencies]
 black = "24.10.0"
