--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,10 @@ python = "^3.13"
 fastapi = "^0.115.6"
 orjson = "3.10.12"
 uvicorn = "^0.30.0"
+cryptography = "44.0.0"
+aerich = "0.8.1"
+tomlkit = "0.13.2"
+pydantic-settings = "2.7.1"
 
 [tool.poetry.group.dev.dependencies]
 black = "24.10.0"
