--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ cryptography = "44.0.0"
 aerich = "0.8.1"
 tomlkit = "0.13.2"
 pydantic-settings = "2.7.1"
+aiomysql = "^0.2.0"
+httpx = "0.28.1"
 
 [tool.poetry.group.dev.dependencies]
 black = "24.10.0"
@@ -22,20 +24,6 @@ mypy = "1.13.0"
 pytest = "8.3.4"
 coverage = "7.6.9"
 pytest-asyncio = "0.25.0"
-
-[build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
-
-[dependency-groups]
-dev = [
-    "black (==24.10.0)",
-    "ruff (==0.8.2)",
-    "mypy (==1.13.0)",
-    "pytest (==8.3.4)",
-    "coverage (==7.6.9)",
-    "pytest-asyncio (==0.25.0)"
-]
 
 [tool.black]
 line-length = 120
@@ -54,3 +42,16 @@ omit = ["*/test_*.py"]
 [tool.pytest.ini_options]
 asyncio_mode = "auto"
 asyncio_default_fixture_loop_scope = "session"
+filterwarnings = ['ignore::DeprecationWarning']
+
+[tool.aerich]
+tortoise_orm = "app.configs.tortoise_config.TORTOISE_ORM"
+location = "./migrations"
+src_folder = "./."
+
+[build-system]
+requires = ["poetry-core"]
+build-backend = "poetry.core.masonry.api"
+
+[dependency-groups]
+dev = ["black (==24.10.0)", "ruff (==0.8.2)", "mypy (==1.13.0)", "pytest (==8.3.4)", "coverage (==7.6.9)", "pytest-asyncio (==0.25.0)"]
